# ubx2rinex

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: daily.yml  release.yml  rust.yml
src/: cli.rs  collecter.rs  device.rs  ephemeris.rs  main.rs  runtime.rs  ubx.rs  utils.rs
src/collecter/: ephemeris.rs  fd.rs  mod.rs  navigation.rs  observation.rs  rawxm.rs  settings.rs
src/device/: interface.rs  mod.rs
