[package]
name = "ubx2rinex"
version = "0.3.0"
license = "MPL-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "U-Blox to RINEX deserializer"
homepage = "https://github.com/nav-solutions"
repository = "https://github.com/nav-solutions/ubx2rinex"
keywords = ["gnss", "gps", "geo"]
categories = ["science", "science::geo", "command-line-interface", "command-line-utilities"]
edition = "2021"
readme = "README.md"
exclude = [
    "data/*",
]

[features]
# U-Blox v23 by default
default = ["ublox/ubx_proto23"]

# Select U-Blox v14 protocol
ubx14 = ["ublox/ubx_proto14"]

# Select U-Blox v23 protocol
ubx23 = ["ublox/ubx_proto23"]

# Select U-Blox v27 protocol
ubx27 = ["ublox/ubx_proto27"]

# Select U-Blox v31 protocol
ubx31 = ["ublox/ubx_proto31"]

[dependencies]
log = "0.4"
flate2 = "1"
serde = "1"
serde_json = "1"
thiserror = "2"
itertools = "0.14"
hifitime = "4.1" 
gnss-rs = "2.4"
env_logger = "0.11"
pretty_env_logger = "0.5"
serialport = "4.7"
tokio = { version = "1.43", features = ["full"] }
gnss-protos = { version = "0.0.2", features = ["gps"] }
rinex = { version = "0.21.1", features = ["obs", "nav"] }
clap = { version = "4.4.10", features = ["derive", "color"] }
ublox = { version = "0.6", default-features = false, features = ["std", "sfrbx-gps"] }
